syntax = "proto3";

package  santiago.web.authentication;

service WebAuthentication {
    rpc viaAuthCode (AuthCodeAuthentication) returns (AuthenticationResponse) {}
    rpc logout (Empty) returns (Empty) {}
}

message Player {
  int64 nucleusId = 1;
  int64 personaId = 2;
  Platform platform = 3;
}

enum Platform {
  UNKNOWN = 0;
   /** PC - EA App */
  PC = 1;
  PS4 = 2;
  XBOXONE = 3;
  PS5 = 4;
  XBSX = 5;
  /** COMMON - Used for requests that includes a cross-platform payload */
  COMMON = 6;
  STEAM = 7;
}

enum Reason {
    NONE = 0;
    SYNC = 1;
}

message MutatorString {
    string stringValue = 1;
}

message AuthCodeAuthentication {
    string authCode = 1;
    Platform platform = 2;
    optional MutatorString redirectUri = 3;
    optional string patchVersion  = 4; 
    optional string protocolVersion = 5;
}

message Duration {
    int64 seconds = 1;
    int32 nanos = 2;
}

message TimeTravel {
    Duration offset = 1;
}

message ProtocolVersionOverride {
    string original = 1;
    string overridden = 2;
    Reason reason = 3;
}

message Empty {
}

message AuthenticationResponse {
    string sessionId = 1;
    optional Player player = 2;
    optional TimeTravel timeTravel = 3;
    optional ProtocolVersionOverride protocolVersionOverride = 4;
    string patchVersion  = 5; 
}

